# ML-Threshold-Selection

./: .gitignore  CHANGELOG.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  config.py  main.py  pyproject.toml  repro_run.py  requirements.txt  setup.py
.github/workflows/: ci.yml
archive/: feature_analysis_tool.py
config/: __init__.py
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT.md  INDEX.md  JOSHUA_METHOD_FIXES_SUMMARY.md  JOSHUA_METHOD_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  REPRODUCIBILITY.md  SCIENTIFIC_METHODS.md  USER_GUIDE_MODEL_AND_FEATURES.md  USER_GUIDE_MODEL_AND_FEATURES_EN.md  user_guide.md
docs/development/: CONTRIBUTING.md  PROJECT_DESCRIPTION.md
docs/guides/: ADVANCED_FEATURE_ANALYSIS_GUIDE.md  COMPLETE_FEATURE_UPDATE_SUMMARY.md  COMPREHENSIVE_FIXES_AND_VOXEL_EXPLANATION.md  ELLIPSOID_FEATURE_ENGINEERING_GUIDE.md  ENGLISH_CONVERSION_SUMMARY.md  FEATURE_REMOVAL_AND_ENCODING_FIX.md  FINAL_FIXES_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PREDICTION_ACCURACY_FIX_GUIDE.md  REDUNDANT_FEATURES_FIX_GUIDE.md  SAMPLEID_FIX_GUIDE.md  STRING_COLUMN_FIX_GUIDE.md  VISUALIZATION_GUIDE.md  VOLUME_FEATURE_CORRECTION_GUIDE.md  VOXEL_SIZE_INPUT_GUIDE.md
examples/scripts/: run_semi_supervised_demo.py  run_supervised_demo.py  validate_data.py
outputs/: Threshold_Report_2vox_3vox.txt  Threshold_Report_61vox_145vox.txt  analysis_summary_report_20250929_154746.txt  analysis_summary_report_20250929_155748.txt
scripts/: compare_methods.py  test_compare_fixed_joshua_vs_traditional.py  test_fair_comparison.py  test_fixed_joshua.py  test_joshua_method.py  test_joshua_method_fixed.py
src/analysis/: ellipsoid_feature_analyzer.py  joshua_feature_analyzer.py  joshua_feature_analyzer_old.py
src/features/: ellipsoid_feature_engineering.py  ellipsoid_feature_engineering_legacy.py  joshua_feature_engineering.py  joshua_feature_engineering_fixed.py  res_aware_feature_engineering.py
src/ml_threshold_selection/: __init__.py  analysis_pipeline.py  app_controller.py  data_io.py  data_validator.py  export_results.py  fabric_bootstrap.py  fabric_boxplots_dual_thresholds.py  fabric_logging.py  fabric_pipeline.py  fabric_thresholds.py  feature_engineering.py  feature_utils.py  io_persistence.py  labeling.py  prediction_analysis.py  semi_supervised_learner.py  supervised_learner.py  threshold_finder.py  training_pipeline.py  ui_layout.py  ui_visualization.py
tests/: test_feature_engineering.py
